add bot player placeholder class

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -273,6 +273,10 @@ option {
   background-color: var(--white);
 }
 
+.white {
+  background-color: var(--white1);
+}
+
 .green {
   background-color: var(--green1);
 }
